# cowork-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  master.key  pyproject.toml
.github/scripts/: set-branch-lock.js
.github/workflows/: cla.yml  dev-build-deploy.yml  prod-build-deploy.yml  publish-pypi.yml  publish-staging.yml  publish.yml  staging-build-deploy.yml  staging-freeze.yml  staging-guard.yml  staging-unfreeze.yml  stale-deploy.yml  test.yml  tests-unit.yml  weekly-merge-staging.yml
alembic/: env.py
alembic/versions/: 93375a6617f4_init.py  b7c1d2e3f4a5_channels.py
assets/contributions-agreement/signatures/: cla.json
cowork/: __main__.py  auth_middleware.py  cli.py  dev_setup.py  migrations.py  principal.py  schedule_timing.py  scheduler.py  server.py  updater.py
cowork/api/: collab_local.py
cowork/api/v1/: router.py
cowork/api/v1/endpoints/: activity.py  approvals.py  artifact_edits.py  artifact_shares.py  artifact_versions.py  artifacts.py  channels.py  comments.py  conversations.py  files.py  fs.py  harnesses.py  health.py  memory.py  metrics.py  onboarding.py  pins.py  project_files.py  projects.py  providers.py  publish.py  responses.py  rules.py  schedules.py  search.py  settings.py  skills.py
cowork/channels/: __init__.py  ingress.py  lifecycle.py  plugin.py  polling.py  registry.py  runtime.py  text.py  webhooks.py
cowork/channels/plugins/: __init__.py  discord.py  slack.py  telegram.py  whatsapp.py
cowork/common/: datetime_utils.py  encryption.py  http_client.py  logger.py  path_utils.py  paths.py  settings.py
cowork/common/settings/: __init__.py  app_settings.py  user_settings.py
cowork/db/: migrations.py  scoped.py  session.py
cowork/db/alembic/: env.py
cowork/handlers/: probe.py  responses.py  turn_errors.py
cowork/harnesses/: __init__.py  base.py  legacy_events.py
cowork/harnesses/anton_harness/: __init__.py  browser_telemetry.py  browser_tools.py  harness.py  scratchpad_cell_replay.py  selection.py  settings.py  stream_formatter.py  tools.py
cowork/harnesses/cli_agents/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  config.py  events.py
cowork/harnesses/hermes_harness/: __init__.py  harness.py  memory_adapter.py  settings.py  stream_formatter.py  tools.py
cowork/harnesses/memory/: adapter.py  layout.py  migration.py  registry.py  runtime.py  store.py
cowork/models/: __init__.py  approval.py  approval_token.py  artifact.py  base.py  browser.py  channel.py  conversation.py  file.py  identity.py  message.py  message_event.py  pin.py  project.py  project_collaboration.py  provider_config.py  schedule.py  setting.py  skill.py  standing_rule.py  task_object.py
cowork/runtime/: __init__.py  access.py  approvals.py  artifact_events.py  artifacts.py  conversations.py  events.py  inference.py  schemas.py
cowork/schemas/: approvals.py  base.py  browser.py  channels.py  connectors.py  conversations.py  files.py  memory.py  pins.py  projects.py  responses.py  rules.py  schedules.py  settings.py  skills.py
cowork/services/: approvals.py  artifact_activity.py  artifact_edits.py  artifact_export.py  artifact_generation_checkpoints.py  artifact_handoff.py  artifact_shares.py  artifact_version_backends.py  artifact_versions.py  artifacts.py  channel_bindings.py  channel_events.py  channel_lifecycle.py  channels.py  comments_layer.py  comments_proxy.py  conversations.py  digest.py  failover_provider.py  files.py  llm_telemetry.py  memory.py  metrics.py  notifications.py  onboarding.py  pins.py  preview_proxy.py  project_collaboration.py  project_permissions.py  projects.py  provider_registry.py  providers.py  publish.py  request_identity.py  rules.py  schedules.py  scratchpad_runtime.py  screenshot_diff.py  settings.py  skill_links.py  (+3 more)
cowork/services/browser/: __init__.py  actions.py  approval.py  bridge.py  client.py  control.py  permissions.py
cowork/services/connectors/: connections.py  encrypted_vault.py  health.py  identity.py  persist.py  probe.py  registry.py  submissions.py  test_runner.py  vault_lock.py
cowork/skills_builtin/: README.md
cowork/skills_builtin/documents/: SKILL.md
cowork/skills_builtin/docx/: SKILL.md
cowork/skills_builtin/gmail/: SKILL.md
cowork/skills_builtin/google-sheets/: SKILL.md
cowork/skills_builtin/google-slides/: SKILL.md
cowork/skills_builtin/morning-digest/: SKILL.md
cowork/skills_builtin/pdf/: SKILL.md
cowork/skills_builtin/presentations/: SKILL.md
cowork/skills_builtin/skill-creator/: SKILL.md
cowork/streaming/: __init__.py  backend.py  buffer.py  records.py  recovery.py  registry.py  selection_gateway.py
deployment/cowork-server/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deployment/cowork-server/templates/: ephemeral-secrets.yaml
docs/: DESIGN.md  MIGRATION.md  MIGRATION_PROGRESS.md  SERVER_MIGRATION.md
scripts/: context_report.py  smoke.py
tests/: conftest.py  test_active_project_resolution.py  test_agent_attachment_context.py  test_anton_turn_capture.py  test_app_settings.py  test_approvals_model.py  test_approvals_service.py  test_artifact_edits.py  test_artifact_export.py  test_artifact_generated_checkpoints.py  test_artifact_modified.py  test_artifact_pagination.py  test_artifact_shares.py  test_artifact_version_endpoints.py  test_artifact_versions.py  test_artifacts_url.py  test_attachment_linkage.py  test_attachment_long_project.py  test_auth_cards.py  test_auth_middleware.py  test_browser_broker_control.py  test_browser_gate.py  test_browser_host_matching.py  test_browser_model_store.py  test_browser_open_url.py  test_browser_tool.py  test_browser_tools.py  test_build_llm_client.py  test_channel_context.py  test_channels_ingress.py  test_channels_polling.py  test_channels_smoke.py  test_clear_login_pinned_models.py  test_comments_layer.py  test_comments_proxy.py  test_connection_identity.py  test_connector_field_names.py  test_connector_health.py  test_connector_lifecycle_endpoints.py  test_connector_vault_encryption.py  (+90 more)
(+255 files in other folders)
