[project]
name = "cowork-server"
dynamic = ["version"]
description = "FastAPI backend for the MindsHub Cowork desktop app"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "MindsDB Inc", email = "admin@mindsdb.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic>=1.17.0",
    "anton-agent>=2.26.6.30.1,<3",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "hermes-agent>=0.15.2,<0.18",
    "httpx>=0.27",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    # Postgres driver for cloud deploys. Desktop installs default to SQLite;
    # the cloud Helm chart points DATABASE_URI at Postgres, and SQLAlchemy
    # needs a driver present or postgresql:// fails at connect. psycopg v3
    # ships binary wheels, so no build toolchain in the image.
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "tzlocal>=5.0",
    "uvicorn>=0.47.0",
    # Document export (md/html → pdf/docx). All pure-Python, no native
    # deps — keeps the desktop install clean across platforms.
    "markdown>=3.7",
    "xhtml2pdf>=0.2.16",
    "python-docx>=1.1.2",
    "htmldocx>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/mindsdb/cowork-server"
Repository = "https://github.com/mindsdb/cowork-server"
Issues = "https://github.com/mindsdb/cowork-server/issues"

[project.scripts]
cowork-server = "cowork.cli:main"
cowork-dev-setup = "cowork.cli:dev_setup_main"

[project.optional-dependencies]
channels = [
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.targets.wheel]
packages = ["cowork"]

[tool.uv.sources]
anton-agent = { git = "https://github.com/mindsdb/anton.git", branch = "main" }
# pinned: upstream HEAD (v0.18.0) requires cryptography==46, conflicts with our >=48
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git", rev = "44ddc552f5e054759a6970af8997ea588a9d81c9" }

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
